<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp" />
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/title_holder"/>
    <TextView
        android:id="@+id/txtType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtTitle"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/type_holder"/>
    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtType"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/location_holder"/>
    <TextView
        android:id="@+id/txtCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtLocation"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/company_holder"/>
    <TextView
        android:id="@+id/txtCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtCompany"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/created_at_holder"/>

</RelativeLayout>
