<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    tools:context=".JobDetailActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp" />
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/title_holder"/>
    <TextView
        android:id="@+id/txtType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtTitle"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/type_holder"/>
    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtType"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/location_holder"/>
    <TextView
        android:id="@+id/txtCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtLocation"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/company_holder"/>
    <TextView
        android:id="@+id/txtCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/txtCompany"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/created_at_holder"/>
    <View
        android:id="@+id/separator"
        android:layout_below="@id/imgLogo"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:layout_height="1dp"/>
    <ScrollView
        android:layout_below="@id/separator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</RelativeLayout>